--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,22 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Kaisei HarunoUmi", serif;
+  scroll-behavior: smooth;
+}
+
+.btn-up i {
+  color: #ffaa00;
+  background: black;
+  font-size: 5rem;
+  padding: 0rem;
+  border-radius: 160rem;
+}
+
+.btn-up {
+  position: fixed;
+  bottom: 5vh;
+  right: 5vw;
+  z-index: 10000;
 }
 
 header {
@@ -447,14 +463,13 @@ header .nav-menu .fondo-menu div .link:hover {
 #main-conoceme .section-conoceme__cont-texto .opgg {
   color: #ffaa00;
 }
-#main-conoceme .section-conoceme__cont-texto ul {
+#main-conoceme .section-conoceme__cont-texto .cont-ul-conoceme {
   display: flex;
-  justify-content: center;
   align-items: center;
-  padding-bottom: 15vh;
+  justify-content: center;
 }
-#main-conoceme .section-conoceme__cont-texto li {
-  padding: 5vh 5vw;
+#main-conoceme .section-conoceme__cont-texto ul {
+  margin: 5vw;
 }
 #main-conoceme .section-conoceme__icono {
   color: white;
